--- a/A6/mainwindow.ui
+++ b/A6/mainwindow.ui
@@ -13,8 +13,226 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
-  <widget class="QWidget" name="centralwidget"/>
-  <widget class="QMenuBar" name="menubar"/>
+  <widget class="QWidget" name="centralwidget">
+   <widget class="QPushButton" name="redButton">
+    <property name="geometry">
+     <rect>
+      <x>250</x>
+      <y>260</y>
+      <width>110</width>
+      <height>110</height>
+     </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: red;
+ border-style: solid;
+ border-width:5px;
+ border-radius:50px;
+ border-color: black;
+ max-width:100px;
+ max-height:100px;
+ min-width:100px;
+ min-height:100px;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="blueButton">
+    <property name="geometry">
+     <rect>
+      <x>450</x>
+      <y>260</y>
+      <width>110</width>
+      <height>110</height>
+     </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: blue;
+ border-style: solid;
+ border-width:5px;
+ border-radius:50px;
+ border-color: black;
+ max-width:100px;
+ max-height:100px;
+ min-width:100px;
+ min-height:100px;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="title">
+    <property name="geometry">
+     <rect>
+      <x>320</x>
+      <y>156</y>
+      <width>161</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: black;
+font: bold 50px;</string>
+    </property>
+    <property name="text">
+     <string>SIMON</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="titleShadow">
+    <property name="geometry">
+     <rect>
+      <x>320</x>
+      <y>150</y>
+      <width>161</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: white;
+font: bold 50px;</string>
+    </property>
+    <property name="text">
+     <string>SIMON</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="redButtonBase">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>250</x>
+      <y>275</y>
+      <width>110</width>
+      <height>110</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: red;
+ border-style: solid;
+ border-width:5px;
+ border-radius:50px;
+ border-color: black;
+ max-width:100px;
+ max-height:100px;
+ min-width:100px;
+ min-height:100px;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="blueButtonBase">
+    <property name="geometry">
+     <rect>
+      <x>450</x>
+      <y>275</y>
+      <width>110</width>
+      <height>110</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: blue;
+ border-style: solid;
+ border-width:5px;
+ border-radius:50px;
+ border-color: black;
+ max-width:100px;
+ max-height:100px;
+ min-width:100px;
+ min-height:100px;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="author">
+    <property name="geometry">
+     <rect>
+      <x>350</x>
+      <y>200</y>
+      <width>101</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: white;
+font: bold 10px;</string>
+    </property>
+    <property name="text">
+     <string>BY LANDON WEST</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="authorShadow">
+    <property name="geometry">
+     <rect>
+      <x>350</x>
+      <y>204</y>
+      <width>101</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: black;
+font: bold 10px;</string>
+    </property>
+    <property name="text">
+     <string>BY LANDON WEST</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>340</x>
+      <y>440</y>
+      <width>121</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>20</pointsize>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: transparent; 
+border: 0px</string>
+    </property>
+    <property name="text">
+     <string>START GAME</string>
+    </property>
+   </widget>
+   <zorder>authorShadow</zorder>
+   <zorder>blueButtonBase</zorder>
+   <zorder>redButtonBase</zorder>
+   <zorder>redButton</zorder>
+   <zorder>blueButton</zorder>
+   <zorder>title</zorder>
+   <zorder>titleShadow</zorder>
+   <zorder>author</zorder>
+   <zorder>pushButton</zorder>
+  </widget>
+  <widget class="QMenuBar" name="menubar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>800</width>
+     <height>22</height>
+    </rect>
+   </property>
+  </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources/>
