--- a/A6/mainwindow.ui
+++ b/A6/mainwindow.ui
@@ -449,6 +449,28 @@ font: bold 20px;</string>
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
+   <widget class="QProgressBar" name="progressBar">
+    <property name="geometry">
+     <rect>
+      <x>340</x>
+      <y>150</y>
+      <width>118</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
+    <property name="value">
+     <number>0</number>
+    </property>
+    <property name="textVisible">
+     <bool>false</bool>
+    </property>
+    <property name="invertedAppearance">
+     <bool>false</bool>
+    </property>
+   </widget>
    <zorder>redButtonBase</zorder>
    <zorder>redButton</zorder>
    <zorder>blueButtonBase</zorder>
@@ -469,6 +491,7 @@ font: bold 20px;</string>
    <zorder>howToPlayTitle</zorder>
    <zorder>howToPlay</zorder>
    <zorder>endGameState</zorder>
+   <zorder>progressBar</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
