--- a/A6/mainwindow.ui
+++ b/A6/mainwindow.ui
@@ -18,6 +18,9 @@
     <string notr="true"/>
    </property>
    <widget class="QPushButton" name="redButton">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>250</x>
@@ -45,6 +48,9 @@
     </property>
    </widget>
    <widget class="QPushButton" name="blueButton">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>450</x>
